attempt to bring collective order to combined cmake build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,10 @@ project(OPTICKS)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} 
                       "$ENV{ENV_HOME}/cmake/Modules"
+                      "$ENV{OPTIX_SDK_DIR}/CMake"
           ) 
+
+include(EnvBuildOptions)
 
 add_subdirectory(boost/bpo/bcfg)  
 add_subdirectory(boost/bregex)    
@@ -14,15 +17,15 @@ add_subdirectory(graphics/assimpwrap)
 add_subdirectory(graphics/openmeshrap)  
 add_subdirectory(graphics/oglrap)       
 
-find_package(OptiX QUIET)
-if(OptiX_FOUND)
+if(EXISTS $ENV{OPTIX_SDK_DIR}/CMake AND WITH_OPTIX)
+    message("OPTIX_SDK_DIR:$ENV{OPTIX_SDK_DIR}")
     add_subdirectory(cuda/cudawrap)        
     add_subdirectory(numerics/thrustrap)
     add_subdirectory(graphics/optixrap)
     add_subdirectory(opticksop)
     add_subdirectory(opticksgl)
 else()
-    message("OptiX NOT found")
+    message("WITH_OPTIX:${WITH_OPTIX} OPTIX_SDK_DIR:$ENV{OPTIX_SDK_DIR} ")
 endif()
 
 add_subdirectory(graphics/ggeoview)
