--- a/boost/bregex/CMakeLists.txt
+++ b/boost/bregex/CMakeLists.txt
@@ -7,18 +7,17 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
           ) 
 
 include(EnvBuildOptions)
+include(EnvCompilationFlags)
 
 find_package(Boost REQUIRED)
 
 set(LIBRARIES
    ${Boost_LIBRARIES}
 )
-
 include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${Boost_INCLUDE_DIRS} 
 )
-
 add_definitions(
    ${Boost_DEFINITIONS} 
 )
@@ -33,7 +32,7 @@ target_link_libraries( ${name}
 
 
 SET(hdrs 
-regexsearch.hh
+   regexsearch.hh
 )
 
 
