--- a/graphics/assimpwrap/CMakeLists.txt
+++ b/graphics/assimpwrap/CMakeLists.txt
@@ -2,17 +2,12 @@ cmake_minimum_required(VERSION 2.6.4 FATAL_ERROR)
 set(name AssimpWrap)
 project(${name})
 
-
-set(CMAKE_MODULE_PATH 
-    ${CMAKE_MODULE_PATH} 
+set(CMAKE_MODULE_PATH  ${CMAKE_MODULE_PATH} 
     "$ENV{ENV_HOME}/cmake/Modules"
 ) 
 
 include(EnvBuildOptions)
-
-set(BUILD_SHARED_LIBS ON)
-
-
+include(EnvCompilationFlags)
 
 find_package(Boost REQUIRED)
 find_package(Assimp REQUIRED)
