--- a/opticksgl/CMakeLists.txt
+++ b/opticksgl/CMakeLists.txt
@@ -9,9 +9,8 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
           ) 
 
 include(EnvBuildOptions)
-set(BUILD_SHARED_LIBS ON)
 
-########################## for OptiX
+########################## from OPTIX_SDK_DIR/CMake
 include(Macros)
 include (CompilerInfo)
 include (ConfigCompilerFlags)
@@ -25,17 +24,7 @@ find_package(OptiX REQUIRED)
 find_package(CUDA 2.3 REQUIRED)
 include(OptiXThrustMacros)      # for optixthrust_add_executable handling .cu partitioning
 
-
-## c++11 forced by AsioZMQ : AsioZMQ not used here, but expect best to use same compiler options as far as possible
-if (${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -stdlib=libc++")
-else ()
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++0x")
-endif ()
-
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-unused-function -Wno-unused-private-field")
-
-
+include(EnvCompilationFlags)   
 
 
 find_package(Boost REQUIRED)
