--- a/optix/ggeo/CMakeLists.txt
+++ b/optix/ggeo/CMakeLists.txt
@@ -2,15 +2,13 @@ cmake_minimum_required(VERSION 2.6.4 FATAL_ERROR)
 set(name GGeo)
 project(${name})
 
-
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} 
                       "$ENV{ENV_HOME}/cmake/Modules"
           ) 
 
-set(BUILD_SHARED_LIBS ON)
 
 include(EnvBuildOptions)
-
+include(EnvCompilationFlags)
 
 find_package(Boost REQUIRED)
 find_package(GLM REQUIRED)
