simplify include handling to use source dirs for collective cmake build

--- a/boost/bpo/bcfg/CMakeLists.txt
+++ b/boost/bpo/bcfg/CMakeLists.txt
@@ -25,10 +25,10 @@ target_link_libraries( ${name}
       ${Boost_LIBRARIES}
 )
 
-install(TARGETS ${name}     DESTINATION lib)
 
 SET(hdrs  Cfg.hh)
 
-install(FILES ${hdrs} DESTINATION include)
+install(TARGETS ${name}     DESTINATION lib)
+install(FILES ${hdrs} DESTINATION include/${name})
 
 
