--- a/graphics/ppm/CMakeLists.txt
+++ b/graphics/ppm/CMakeLists.txt
@@ -3,11 +3,10 @@ set(name PPM)
 project(${name})
 
 add_executable(${name}Test main.cc)
-install(TARGETS ${name}Test DESTINATION bin)
 
 SET(hdrs 
       loadPPM.h
 )
 
-install(FILES ${hdrs} DESTINATION include)
-install(FILES ${hdrs} DESTINATION include)
+install(TARGETS ${name}Test DESTINATION bin)
+install(FILES ${hdrs} DESTINATION include/${name})
