--- a/opticksgl/CMakeLists.txt
+++ b/opticksgl/CMakeLists.txt
@@ -132,6 +132,6 @@ target_link_libraries( ${name} ${LIBRARIES} )
 
 install(TARGETS ${name} DESTINATION lib)
 
-install(FILES ${hdrs}    DESTINATION include)
+install(FILES ${hdrs}   DESTINATION include/${name})
 
 #add_subdirectory(tests)
