--- a/graphics/openmeshrap/CMakeLists.txt
+++ b/graphics/openmeshrap/CMakeLists.txt
@@ -59,9 +59,9 @@ set(LIBRARIES
 
 target_link_libraries( ${name}  ${LIBRARIES})
 
-install(FILES  ${hdrs} DESTINATION include)
 
 install(TARGETS ${name} LIBRARY DESTINATION lib)
+install(FILES ${hdrs} DESTINATION include/${name})
 
 add_subdirectory(tests)
 
