--- a/opticksop/CMakeLists.txt
+++ b/opticksop/CMakeLists.txt
@@ -105,7 +105,7 @@ SET(hdrs
 
 install(TARGETS ${name}  DESTINATION lib)
 
-install(FILES ${hdrs}    DESTINATION include)
+install(FILES ${hdrs}   DESTINATION include/${name})
 
 add_subdirectory(tests)
 
