--- a/optix/ggeo/CMakeLists.txt
+++ b/optix/ggeo/CMakeLists.txt
@@ -155,6 +155,8 @@ GGeoTest.hh
 GGeoTestConfig.hh
 )
 
+
+message("GGEO:LIBRARIES:${LIBRARIES}")
 target_link_libraries(${name} ${LIBRARIES})
 
 install(TARGETS ${name} LIBRARY DESTINATION lib)
