rename Opticks subpackage to OpticksCore to avoid name clash with top level

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ add_subdirectory(boost/bpo/bcfg)
 add_subdirectory(boost/bregex)    
 add_subdirectory(numerics/npy)   
 
-add_subdirectory(opticks)         
+add_subdirectory(optickscore)         
 add_subdirectory(optix/ggeo)     
 add_subdirectory(graphics/assimpwrap)   
 add_subdirectory(graphics/openmeshrap)  
