--- a/graphics/ggeoview/CMakeLists.txt
+++ b/graphics/ggeoview/CMakeLists.txt
@@ -85,7 +85,7 @@ find_package(GLM  REQUIRED)
 find_package(Cfg REQUIRED)
 find_package(Bregex REQUIRED)
 find_package(NPY   REQUIRED)
-find_package(Opticks REQUIRED)
+find_package(OpticksCore REQUIRED)
 
 set(BASE_INCLUDES
    ${Boost_INCLUDE_DIRS} 
@@ -93,7 +93,7 @@ set(BASE_INCLUDES
    ${Cfg_INCLUDE_DIRS} 
    ${Bregex_INCLUDE_DIRS}
    ${NPY_INCLUDE_DIRS} 
-   ${Opticks_INCLUDE_DIRS} 
+   ${OpticksCore_INCLUDE_DIRS} 
 )
 set(BASE_LIBRARIES
    ${Boost_LIBRARIES}
@@ -101,7 +101,7 @@ set(BASE_LIBRARIES
    ${Cfg_LIBRARIES}
    ${Bregex_LIBRARIES}
    ${NPY_LIBRARIES}
-   ${Opticks_LIBRARIES}
+   ${OpticksCore_LIBRARIES}
 )
 set(BASE_DEFINITIONS
    ${Boost_DEFINITIONS} 
@@ -109,7 +109,7 @@ set(BASE_DEFINITIONS
    ${Cfg_DEFINITIONS}
    ${Bregex_DEFINITIONS}
    ${NPY_DEFINITIONS}
-   ${Opticks_DEFINITIONS}
+   ${OpticksCore_DEFINITIONS}
 )
 
 ########### GEOMETRY #####
