--- a/optickscore/tests/CMakeLists.txt
+++ b/optickscore/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
-set(name OpticksTest)
+set(name OpticksCoreTest)
 project(${name})
 
 file(GLOB TEST_CC_SRCS "*Test.cc")
@@ -8,7 +8,7 @@ foreach(TEST_CC_SRC ${TEST_CC_SRCS})
     get_filename_component(TGT ${TEST_CC_SRC} NAME_WE)
     add_executable(${TGT} ${TEST_CC_SRC})
     target_link_libraries(${TGT} 
-               ${LIBRARIES} Opticks
+               ${LIBRARIES} OpticksCore
     )
     install(TARGETS ${TGT} DESTINATION bin)
 endforeach()
