--- a/optix/cfg4/CMakeLists.txt
+++ b/optix/cfg4/CMakeLists.txt
@@ -16,7 +16,7 @@ find_package(GLM REQUIRED)
 find_package(NPY REQUIRED)
 find_package(Cfg REQUIRED)
 find_package(GGeo REQUIRED)
-find_package(Opticks REQUIRED)
+find_package(OpticksCore REQUIRED)
 
 find_package(Geant4 REQUIRED)  
 find_package(EnvXercesC  REQUIRED)  
@@ -30,7 +30,7 @@ set(INCLUDE_DIRS
    ${NPY_INCLUDE_DIRS}
    ${Cfg_INCLUDE_DIRS}
    ${GGeo_INCLUDE_DIRS}
-   ${Opticks_INCLUDE_DIRS}
+   ${OpticksCore_INCLUDE_DIRS}
    ${Geant4_INCLUDE_DIRS}
    ${XERCESC_INCLUDE_DIR}
    ${G4DAE_INCLUDE_DIRS}
@@ -42,7 +42,7 @@ set(LIBRARIES
    ${NPY_LIBRARIES}
    ${Cfg_LIBRARIES}
    ${GGeo_LIBRARIES}
-   ${Opticks_LIBRARIES}
+   ${OpticksCore_LIBRARIES}
    ${Geant4_LIBRARIES}
    ${XERCESC_LIBRARIES}
    ${G4DAE_LIBRARIES}
@@ -54,7 +54,7 @@ set(DEFINITIONS
    ${NPY_DEFINITIONS} 
    ${GGeo_DEFINITIONS} 
    ${Cfg_DEFINITIONS} 
-   ${Opticks_DEFINITIONS}
+   ${OpticksCore_DEFINITIONS}
    ${Geant4_DEFINITIONS}
    ${XERCESC_DEFINITIONS}
    ${G4DAE_DEFINITIONS}
