--- a/optix/ggeo/CMakeLists.txt
+++ b/optix/ggeo/CMakeLists.txt
@@ -15,7 +15,7 @@ find_package(GLM REQUIRED)
 find_package(Bregex REQUIRED)
 find_package(Cfg REQUIRED)
 find_package(NPY REQUIRED)
-find_package(Opticks REQUIRED)
+find_package(OpticksCore REQUIRED)
 
 
 set(INCLUDE_DIRS
@@ -26,7 +26,7 @@ set(INCLUDE_DIRS
    ${Bregex_INCLUDE_DIRS} 
    ${Cfg_INCLUDE_DIRS} 
    ${NPY_INCLUDE_DIRS}
-   ${Opticks_INCLUDE_DIRS}
+   ${OpticksCore_INCLUDE_DIRS}
 )
 
 set(LIBRARIES
@@ -34,14 +34,14 @@ set(LIBRARIES
    ${Bregex_LIBRARIES}
    ${Cfg_LIBRARIES}
    ${NPY_LIBRARIES}
-   ${Opticks_LIBRARIES}
+   ${OpticksCore_LIBRARIES}
 )
 
 set(DEFINITIONS
    ${Boost_DEFINITIONS} 
    ${Bregex_DEFINITIONS} 
    ${Cfg_DEFINITIONS} 
-   ${Opticks_DEFINITIONS} 
+   ${OpticksCore_DEFINITIONS} 
 )
 
 include_directories(${INCLUDE_DIRS})   
